fix: booking service boilerplate
